<resources>
    <string name="app_name"></string>
    <string name="nombre">Fabián González</string>
    <string name="telefono">5539292383</string>
    <string name="email">Escribe tu usuario</string>
    <string name="pnombre">nombre</string>
    <string name="ptelefono">telefono</string>
    <string name="app_title">Petagram</string>
    <string name="pemail">email</string>
    <string name="plikes">0</string>
    <string name="menu_about">Acerca de</string>
    <string name="menu_settings">Contacto</string>
    <string name="menu_configurar">Configurar cuenta</string>
    <string name="menu_notificaciones">Recibir notificaciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guardar_cuenta">Guardar cuenta</string>
</resources>
