<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/mStar"
        android:title="Star"
        android:orderInCategory="102"
        app:showAsAction="always"
        android:icon="@drawable/star"></item>
    <item android:id="@+id/mAbout"
        android:title="@string/menu_about"
        android:orderInCategory="101"
        ></item>
    <item android:id="@+id/mContact"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        ></item>
    <item android:id="@+id/mSettings"
        android:title="@string/menu_configurar"
        android:orderInCategory="102"
        ></item>
    <item android:id="@+id/mNotificaciones"
        android:title="@string/menu_notificaciones"
        android:orderInCategory="102"
        ></item>
</menu>